--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
   "scipy>=1.10",
   "xarray>=2023.1",
   "pandas>=1.5",
-  "netCDF4>=1.6"
+  "netCDF4>=1.6",
+  "statsmodels>=0.13"
 ]
 
 [project.optional-dependencies]
